@@ -54,6 +54,7 @@ add_subdirectory(plugins/soundkonverter_codec_mplayer)
 add_subdirectory(plugins/soundkonverter_codec_faac)
 add_subdirectory(plugins/soundkonverter_codec_neroaac)
 add_subdirectory(plugins/soundkonverter_codec_timidity)
+add_subdirectory(plugins/soundkonverter_codec_fluidsynth)
 add_subdirectory(plugins/soundkonverter_codec_wavpack)
 add_subdirectory(plugins/soundkonverter_codec_shorten)
 add_subdirectory(plugins/soundkonverter_codec_musepack)
