@@ -3,6 +3,7 @@
 -Add: Inform the user if there is a better backend available for a given format (e.g. prefer lame over ffmpeg)
 -Add: Make it possible to choose the preferred extension for ogg vorbis files
 -Add: Playing CD tracks before ripping them
+-Add: Fluidsynth plugin
 -Change: Prevent options dialogs from getting too wide
 -Fix: CDDB requests
 -Fix: Handle files with dollar signs and backticks (`) correctly
